--- a/Selenium/Selenium.csproj
+++ b/Selenium/Selenium.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="WebDriverManager" Version="2.16.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="picture\" />
+  </ItemGroup>
+
 </Project>
